<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IHMGroom">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="150dp"
            android:text="@string/choisissez_votre_disponibilite"
            android:textSize="30sp" />

        <Button
            android:id="@+id/bouttonPerso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="40dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/perso" />

        <Button
            android:id="@+id/bouttonEntrer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="40dp"
            android:background="@android:color/holo_green_light"
            android:text="@string/entrer" />

        <Button
            android:id="@+id/bouttonAbsent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="40dp"
            android:background="@android:color/holo_red_light"
            android:text="@string/absent" />

        <Button
            android:id="@+id/bouttonOccupe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="40dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/occupe" />

        <Button
            android:id="@+id/bouttonSonnette"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activerSonnette" />

        <Button
            android:id="@+id/bouttonDeconnection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:text="@string/connexion" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>